hphp/hack/test/typecheck/fc_enum_implicitly_arraykey.php.rust_elab.exp
File "fc_enum_implicitly_arraykey.php", line 4, characters 6-11:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "fc_enum_implicitly_arraykey.php", line 9, characters 6-11:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "fc_enum_implicitly_arraykey.php", line 14, characters 6-11:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "fc_enum_implicitly_arraykey.php", line 19, characters 6-11:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
